Fix compilation errors: update ArtifactorySourceCodeFinder, NexusSourceCodeFinder, SonatypeSourceCodeFinder to use SourceAttachPlugin.getProxyService() instead of removed getProxyService() in AbstractSourceCodeFinder
Agent-Logs-Url: https://github.com/nbauma109/ecd/sessions/341afa61-1cfc-49cb-9360-22e3c8e7dc23

Co-authored-by: nbauma109 <9403560+nbauma109@users.noreply.github.com>