@@ -29,6 +29,7 @@ import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.eclipse.core.net.proxy.IProxyService;
 
+import io.github.nbauma109.decompiler.source.attach.SourceAttachPlugin;
 import io.github.nbauma109.decompiler.source.attach.utils.ProxyUtil;
 import io.github.nbauma109.decompiler.source.attach.utils.SourceAttachUtil;
 import io.github.nbauma109.decompiler.source.attach.utils.SourceBindingUtil;
@@ -151,21 +152,18 @@ public class ArtifactorySourceCodeFinder extends AbstractSourceCodeFinder implem
         String apiUrl = getArtifactApiUrl();
         String url = buildSearchUrl(apiUrl, g, a, v, c, sha1);
 
-        // Get Eclipse proxy service
-        IProxyService proxyService = getProxyService();
+        // Get Eclipse proxy service via activator (ServiceTracker, no OSGi service leak)
+        SourceAttachPlugin defaultPlugin = SourceAttachPlugin.getDefault();
+        IProxyService proxyService = defaultPlugin != null ? defaultPlugin.getProxyService() : null;
 
         // Open connection with proxy support
         URLConnection connection;
-        if (proxyService != null) {
-            try {
-                URI uri = new URI(url);
-                Proxy proxy = ProxyUtil.getProxy(uri, proxyService);
-                connection = new URL(url).openConnection(proxy);
-            } catch (Exception e) {
-                Logger.debug(e);
-                connection = new URL(url).openConnection();
-            }
-        } else {
+        try {
+            URI uri = new URI(url);
+            Proxy proxy = ProxyUtil.getProxy(uri, proxyService);
+            connection = new URL(url).openConnection(proxy);
+        } catch (Exception e) {
+            Logger.debug(e);
             connection = new URL(url).openConnection();
         }
 
